assets/css/main.css
/* ... */
/* Only for Vimeo embed
.video-responsive::before {
  display: block;
  content: "";
  padding-top: 56.25%;
}
 */

.video-responsive-item {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}

@media screen and (max-width: 500px) {
  .video-responsive{
     width: 300px;
     padding-bottom: 0;
   }
}

@media screen and (max-width: 380px) {
  .video-responsive{
     width: 180px;
     padding-bottom: 0;
   }
}

        
/* Calls to Action */
#ctas {
  display: flex; 
  flex-wrap: wrap;}
  #ctas a.button {
  	margin: 0 1em 1em 0;
  }


/* Footer */
#footer {
  -moz-transition: opacity 0.5s ease-in-out;
  -webkit-transition: opacity 0.5s ease-in-out;
  -ms-transition: opacity 0.5s ease-in-out;
  transition: opacity 0.5s ease-in-out;
  bottom: 4em;
  color: rgba(255, 255, 255, 0.5);
  left: 4em;
  opacity: 0.5;
  position: absolute; }
  #footer .icons {
    margin: 0 0 0.5em 0; }
  #footer .copyright {
    font-size: 0.8em;
    list-style: none;
    padding: 0; }
    #footer .copyright li {
      border-left: solid 1px rgba(255, 255, 255, 0.25);
      display: inline-block;
      line-height: 1em;
      margin: 0 0 0 0.75em;
      padding: 0 0 0 0.75em; }
      #footer .copyright li:first-child {
        border-left: 0;
        margin-left: 0;
        padding-left: 0; }
    #footer .copyright a {
      color: inherit; }
  #footer:hover {
    opacity: 1; }
  #footer > :last-child {
    margin-bottom: 0; }
  @media screen and (max-width: 1680px) {
    #footer {
      bottom: 1.5em;
      left: 3.5em; } }
  @media screen and (max-width: 736px) {
    #footer {
      bottom: -0.5em;
      left: 2em; } }
  @media screen and (max-width: 680px) {
    #footer {
      bottom: -3.5em;
      left: 2em; } }
  @media screen and (max-width: 360px) {
    #footer {
      bottom: -2.5em;
      left: 1.25em; } }
  @media screen and (max-height: 640px) {
    #footer {
      bottom: auto;
      left: auto;
      margin: 1em 0 0 0;
      position: relative; } }

